<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="8">

            <ImageView
                android:id="@+id/image_picker_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:contentDescription="@string/profile_pic"
                android:onClick="onImageViewClicked"
                tools:srcCompat="@tools:sample/avatars"
                android:background="@drawable/shape_image_oval"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="2"
                android:orientation="vertical"
                android:padding="@dimen/padding">

                <TextView
                    android:id="@+id/personal_data_name_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_view_height"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/personal_data_surname_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_view_height"
                    android:layout_below="@id/personal_data_name_text_view"
                    android:text="@string/surname" />
            </RelativeLayout>
        </LinearLayout>

        <EditText
            android:id="@+id/personal_data_description_editText"
            android:layout_width="match_parent"
            android:layout_height="138dp"
            android:ems="10"
            android:hint="@string/personal_data_description_hint"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:autofillHints="" />

        <TextView
            android:padding="@dimen/padding"
            android:id="@+id/descriptionCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/gender" />

        <RadioGroup
            android:id="@+id/personal_data_gender_radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/padding">

            <RadioButton
                android:id="@+id/radioButtonMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/radiobtn_login_hombre" />

            <RadioButton
                android:id="@+id/radioButtonFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding"
                android:text="@string/radiobtn_login_mujer" />
        </RadioGroup>
        <TextView
            android:padding="@dimen/padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"/>

        <ScrollView
            android:padding="@dimen/padding"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/personal_data_scroll_view_checkboxes_height"
            >
            <GridLayout
                android:padding="@dimen/padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:alignmentMode="alignBounds"
                android:rowCount="3">

                <CheckBox
                    android:id="@+id/checkBoxMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/hobby_movies" />

                <CheckBox
                    android:id="@+id/checkBoxHiking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/hobby_hiking" />

                <CheckBox
                    android:id="@+id/checkBoxSports"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/hobby_sport" />

                <CheckBox
                    android:id="@+id/checkBoxFriends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/hobby_friends" />

                <CheckBox
                    android:id="@+id/checkBoxDancing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/hobby_dance" />

                <CheckBox
                    android:id="@+id/checkBoxProgramming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding"
                    android:text="@string/hobby_program" />
            </GridLayout>
        </ScrollView>
        <Button
            android:layout_marginTop="@dimen/padding"
            android:padding="@dimen/padding"
            android:background="@drawable/button_selector"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/personal_data_button_save"
            android:onClick="onSaveButtonClicked"/>
        <Button
            android:layout_gravity="center"
            android:padding="@dimen/padding"
            android:layout_marginTop="@dimen/padding"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/button_shape_selected"
            android:text="@string/personal_data_button_skip"/>
    </LinearLayout>
</ScrollView>
