<?xml version="1.0" encoding="utf-8"?><RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:id="@+id/imageView"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher_round"
        android:visibility="visible"
        />

    <LinearLayout
        android:layout_below="@+id/imageView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="158dp"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/editText2"
                android:hint="@string/email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimaryDark"
            app:helperTextEnabled="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:helperText="@string/helperTextPassword">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editText3"
                android:hint="@string/pass"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnGo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_selector"
            android:onClick="onGoPressed"
            android:text="@string/firstButton"
            android:enabled="false"/>



    </LinearLayout>

</RelativeLayout>