<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Registro"
        android:textAlignment="center" />

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/etxtName"
            android:hint="Nombre"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etxtName"
        android:layout_above="@id/nameLinearLayout"
        android:weightSum="2"
        android:id="@+id/nameLinearLayout">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:layout_marginStart="20dp"
                android:id="@+id/etxtSurname"
                android:hint="Primer apellido"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:layout_marginEnd="20dp"
                android:id="@+id/etxtSurname2"
                android:hint="Segundo apellido"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nameLinearLayout">

        <android.support.design.widget.TextInputLayout
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:layout_marginStart="20dp"
                android:id="@+id/etxttlf"
                android:hint="Telefono"/>
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:layout_width="130dp"
            android:layout_height="45dp"
            android:id="@+id/spinner"
            android:entries="@array/items"
            android:layout_weight="2"/>

    </LinearLayout>

    <TextView
        android:text="Género"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/textView"
        />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <RadioButton
            android:id="@+id/radiobtn_login_man"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/radiobtn_login_hombre"
            />

        <RadioButton
            android:id="@+id/radiobtn_login_women"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:text="@string/radiobtn_login_mujer"
            />

        <RadioButton
            android:id="@+id/radiobtn_login_other"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/radiobtn_login_otro"
            />

    </RadioGroup>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/etxtDate"
        android:hint="Fecha"
        android:onClick="showDatePickerDialog"/>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="48dp"
        android:layout_height="41dp"
        android:clickable="true"
        android:layout_marginLeft="300dp"
        android:id="@+id/floatingActionButton"
        android:src="@android:drawable/ic_media_next"/>

</LinearLayout>